# pf2e-atlas

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SPIKE.md  THIRD-PARTY-NOTICES.md  dist-workspace.toml  eslint-local-rules.js  eslint.config.js  justfile  package-lock.json  package.json  pf2e-ranking.json  tsconfig.eslint.json  tsconfig.json
crates/atlas-app-service/: Cargo.toml
crates/atlas-app-service/src/: discovery.rs  error.rs  executor.rs  filter.rs  filters.rs  lib.rs  projection.rs  records.rs  service.rs  test_support.rs  windows.rs
crates/atlas-cli/: Cargo.toml  README.md
crates/atlas-cli/src/: cli.rs  main.rs  output.rs  progress.rs  terminal.rs
crates/atlas-cli/src/agent_skills/: mod.rs  package.rs  plan.rs
crates/atlas-cli/src/cli/: args.rs  parse.rs
crates/atlas-cli/src/commands/: agent_skills.rs  completions.rs  filter_discovery.rs  filters.rs  graph.rs  index.rs  mod.rs  record.rs  search.rs  setup.rs  similar.rs  tags.rs  web.rs
crates/atlas-cli/tests/: agent_skills.rs  cli_help.rs  filter_discovery_json.rs  graph_json.rs  graph_links_json.rs  graph_remaster_json.rs  graph_uses_json.rs  graph_variants_json.rs  index_build_json.rs  index_validate_json.rs  record_json.rs  search_json.rs  search_metric_resolution_json.rs  search_sort_json.rs  setup_clean_json.rs  setup_json.rs  setup_repo_mode_json.rs  similar_json.rs  tags_validate.rs  validate_index_json.rs  version.rs
crates/atlas-cli/tests/support/: command.rs  db.rs  graph.rs  json.rs  mod.rs  path.rs  source.rs  timing.rs  vector.rs
crates/atlas-index/: Cargo.toml  README.md
crates/atlas-index/migrations/00000000000001_create_artifact/: down.sql  up.sql
crates/atlas-index/src/: artifact.rs  artifact_schema.rs  artifact_storage.rs  artifact_validation.rs  build_input.rs  contract.rs  database.rs  discovery.rs  embedding_cache.rs  fts.rs  graph_product.rs  inspect.rs  lib.rs  metadata.rs  read.rs  records.rs  relationship_edges.rs  schema.rs  schema_inventory.rs  search.rs  sql.rs  sqlite_vector_index.rs  test_support.rs  tests.rs  validation.rs  vector.rs  write.rs  writer_progress.rs  writer_visibility.rs
crates/atlas-index/src/artifact/: schema.rs  storage.rs  validation.rs
crates/atlas-index/src/artifact_validation/: content.rs  discovery.rs  embeddings.rs  fts.rs  metrics.rs  relationships.rs  schema.rs
crates/atlas-index/src/contract/: content.rs  discovery.rs
crates/atlas-index/src/discovery/: catalog.rs  definitions.rs  dynamic.rs  error.rs  metrics.rs  mod.rs  request.rs
crates/atlas-index/src/filters/: compiler.rs  metadata.rs  metrics.rs  mod.rs  query.rs  relationships.rs  sql_render.rs  sqlite_keyset.rs
crates/atlas-index/src/fts/: query.rs  ranking.rs
crates/atlas-index/src/graph_projection/: mod.rs
crates/atlas-index/src/ladybug/: mod.rs  reader.rs
crates/atlas-index/src/read/: graph.rs  records.rs  search.rs  validation.rs
crates/atlas-index/src/records/: candidates.rs  content.rs  identity.rs  metrics.rs  parse.rs  relationships.rs  rows.rs  scoped.rs  side_data.rs
crates/atlas-index/src/schema_inventory/: contract_checks.rs  names.rs
crates/atlas-index/src/sqlite/: mod.rs  raw_sql.rs  reader.rs
crates/atlas-index/src/tests/: embedding.rs  filters.rs  fts.rs  graph.rs  graph_product.rs  mod.rs  records.rs  schema_freshness.rs  validation.rs  vector.rs  vector_query.rs
crates/atlas-index/src/write/: input.rs  sqlite.rs
crates/atlas-ingest/: Cargo.toml  README.md
crates/atlas-ingest/src/: artifact_manifest.rs  artifact_outputs.rs  build.rs  diagnostics.rs  embedding_reuse.rs  embeddings.rs  error.rs  index_build_input.rs  lib.rs  progress.rs  report.rs  source_pipeline.rs
crates/atlas-ingest/src/artifact/: mod.rs
crates/atlas-ingest/src/embeddings/: generation.rs
crates/atlas-ingest/src/ladybug/: embeddings.rs  evidence.rs  facts.rs  mod.rs  nodes.rs  output.rs  parquet.rs  relationships.rs  schema.rs  writer.rs
crates/atlas-ingest/src/records/: aliases.rs  loaded.rs  mod.rs  references.rs  taxonomy.rs  variants.rs  visibility.rs
crates/atlas-ingest/src/source/: loader.rs  localization.rs  mechanics.rs  mod.rs  model.rs  normalize.rs  side_data.rs
crates/atlas-ingest/tests/: minimal_artifact.rs
crates/atlas-ingest/tests/fixture_sources/: mod.rs
crates/atlas-ladybug-index/: Cargo.toml
crates/atlas-ladybug-index/src/: discovery.rs  filter.rs  graph.rs  lib.rs  row.rs  search.rs
crates/atlas-ladybug-spike/: Cargo.toml
crates/atlas-ladybug-spike/src/: atlas_cli.rs  cli_parity.rs  graph_value_eval.rs  graphqlite_eval.rs  main.rs  perf_eval.rs  search_eval.rs
crates/atlas-runtime/: Cargo.toml  README.md
crates/atlas-runtime/src/: error.rs  lib.rs  paths.rs  retrieval.rs  runtime.rs  setup.rs  setup_clean.rs  setup_freshness.rs  setup_model.rs
crates/atlas-search/: Cargo.toml  README.md
crates/atlas-search/src/: discovery.rs  error.rs  fusion.rs  graph_context.rs  graph_expand.rs  graph_product.rs  lib.rs  page.rs  query.rs  records.rs  references.rs  resolution.rs  semantic.rs  service.rs  similar.rs  test_support.rs  text.rs
crates/atlas-search/src/fusion/: fts.rs  tests.rs
crates/atlas-search/src/graph/: mod.rs
crates/atlas-search/src/records/: get.rs  mod.rs  references.rs  resolution.rs  (+1 more)
crates/atlas-tags/: Cargo.toml
crates/atlas-tags/src/: assignment.rs  catalog.rs  corpus.rs  id.rs  lib.rs  model.rs  proposal.rs  validation.rs  yaml.rs
crates/atlas-tags/tests/: corpus.rs  fixtures.rs
crates/atlas-web/: Cargo.toml
crates/atlas-web/src/: lib.rs
rust/: Cargo.toml  README.md
rust/crates/atlas-artifact/: Cargo.toml
rust/crates/atlas-cli/: Cargo.toml  README.md
rust/crates/atlas-discovery/: Cargo.toml
rust/crates/atlas-domain/: Cargo.toml  README.md
rust/crates/atlas-embedding/: Cargo.toml  README.md
rust/crates/atlas-index/: Cargo.toml  README.md
rust/crates/atlas-ingest/: Cargo.toml
rust/crates/atlas-record/: Cargo.toml  README.md
rust/crates/atlas-runtime/: Cargo.toml  README.md
rust/crates/atlas-search/: Cargo.toml  README.md
(+1827 files in other folders)
