[workspace]
members = [
  "crates/atlas-cli",
  "crates/atlas-domain",
  "crates/atlas-embedding",
  "crates/atlas-ingest",
  "crates/atlas-index",
  "crates/atlas-record",
  "crates/atlas-runtime",
  "crates/atlas-search",
  "crates/atlas-sqlite-vec",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
repository = "https://github.com/e-kosten/pf2e-atlas"
homepage = "https://github.com/e-kosten/pf2e-atlas"
rust-version = "1.95"

[workspace.dependencies]
atlas-domain = { path = "crates/atlas-domain" }
atlas-embedding = { path = "crates/atlas-embedding" }
atlas-ingest = { path = "crates/atlas-ingest" }
atlas-index = { path = "crates/atlas-index" }
atlas-record = { path = "crates/atlas-record" }
atlas-runtime = { path = "crates/atlas-runtime" }
atlas-search = { path = "crates/atlas-search" }
atlas-sqlite-vec = { path = "crates/atlas-sqlite-vec" }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.60"
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "64-column-tables"] }
indicatif = "0.18.3"
inquire = { version = "0.9.4", default-features = false, features = ["crossterm"] }
rand = "0.9.2"
rayon = "1.12.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlite-vec = "0.1.6"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "=0.22.2", default-features = false, features = ["onig"] }
ureq = "3.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
