[workspace]
members = [
  "crates/atlas-cli",
  "crates/atlas-domain",
  "crates/atlas-ingest",
  "crates/atlas-index",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.95"

[workspace.dependencies]
atlas-domain = { path = "crates/atlas-domain" }
atlas-ingest = { path = "crates/atlas-ingest" }
atlas-index = { path = "crates/atlas-index" }
clap = { version = "4.5.53", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
