[workspace]
members = [
  "crates/atlas-artifact",
  "crates/atlas-cli",
  "crates/atlas-domain",
  "crates/atlas-embedding",
  "crates/atlas-ingest",
  "crates/atlas-index",
  "crates/atlas-record",
  "crates/atlas-runtime",
  "crates/atlas-search",
  "crates/atlas-sqlite-vec",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
rust-version = "1.95"

[workspace.dependencies]
atlas-artifact = { path = "crates/atlas-artifact" }
atlas-domain = { path = "crates/atlas-domain" }
atlas-embedding = { path = "crates/atlas-embedding" }
atlas-ingest = { path = "crates/atlas-ingest" }
atlas-index = { path = "crates/atlas-index" }
atlas-record = { path = "crates/atlas-record" }
atlas-runtime = { path = "crates/atlas-runtime" }
atlas-search = { path = "crates/atlas-search" }
atlas-sqlite-vec = { path = "crates/atlas-sqlite-vec" }
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlite-vec = "0.1.6"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "=0.22.2", default-features = false, features = ["onig"] }
ureq = "3.3.0"
