[package]
name = "atlas-app-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-app-model.workspace = true
atlas-domain.workspace = true
atlas-record.workspace = true
atlas-runtime.workspace = true
atlas-search.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
atlas-search = { workspace = true, features = ["test-support"] }
