[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Local Pathfinder 2e search and reference CLI"

[package.metadata.dist]
dist = true
include = ["../../THIRD-PARTY-NOTICES.md"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-ingest.workspace = true
atlas-index.workspace = true
atlas-record.workspace = true
atlas-runtime.workspace = true
atlas-search.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
inquire.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
atlas-artifact = { workspace = true, features = ["test-support"] }
rusqlite.workspace = true
