[package]
name = "atlas-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-artifact.workspace = true
atlas-discovery.workspace = true
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-record.workspace = true
atlas-sqlite-vec.workspace = true
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
lbug.workspace = true
parquet = { version = "57.0.0", features = ["arrow"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
atlas-artifact = { workspace = true, features = ["test-support"] }
