[package]
name = "atlas-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-record.workspace = true
atlas-sqlite-vec.workspace = true
diesel.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
