[package]
name = "atlas-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-index.workspace = true
atlas-record.workspace = true
ego-tree.workspace = true
rayon.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
