[package]
name = "atlas-ladybug-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
atlas-discovery.workspace = true
atlas-domain.workspace = true
atlas-index.workspace = true
atlas-record.workspace = true
atlas-search.workspace = true
lbug.workspace = true
serde_json.workspace = true
thiserror.workspace = true
