[package]
name = "atlas-ladybug-spike"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
lbug.workspace = true
parquet = { version = "57.0.0", features = ["arrow"] }
serde_json = "1"
