[package]
name = "atlas-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-embedding.workspace = true
atlas-ingest.workspace = true
atlas-index.workspace = true
atlas-ladybug-index.workspace = true
atlas-search.workspace = true
tracing.workspace = true
