[package]
name = "atlas-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-index.workspace = true
atlas-record.workspace = true
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
test-support = ["atlas-index/test-support", "rusqlite"]
