[package]
name = "atlas-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-app-model.workspace = true
atlas-app-service.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
