[package]
name = "atlas-artifact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { workspace = true, optional = true }

[features]
test-support = ["dep:rusqlite"]

[dev-dependencies]
rusqlite.workspace = true
