[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-domain.workspace = true
atlas-embedding.workspace = true
atlas-ingest.workspace = true
atlas-index.workspace = true
atlas-runtime.workspace = true
atlas-search.workspace = true
clap.workspace = true
indicatif.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
atlas-artifact.workspace = true
rusqlite.workspace = true
