[package]
name = "atlas-embedding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
atlas-record.workspace = true
ort.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
atlas-domain.workspace = true
